--- a/README
+++ b/README
@@ -5,6 +5,7 @@
 
 老校区：
 排骨米饭                       //东南门和西南门之间的位置，肉多，菜少适于特别饿的情况下，一般13块，平均三碗米饭。
+川香奇香砂锅                   //云柏鞋业旁边陕西信合小巷子进去，直走有个300米左右，味道不错，6~10块不等。
 
 新校区：
 红烧肉                         //gohome，肉多，土豆，适于特别饿的情况下，一般10快，一定要加一次米饭。
