--- a/README
+++ b/README
@@ -9,7 +9,8 @@
 老校区：
 排骨米饭                       //东南门和西南门之间的位置，肉多，菜少适于特别饿的情况下，一般13块，平均三碗米饭。
 皮薄李饺子                     //东南门以东需要过马路，各种馅都有，一般半斤可以吃饱，在12.5块左右。
-
+油饼母鸡汤                     //徐家庄，小竹签烤肉往西走第一个巷子往里，一百米左右，三块钱饼，两块钱汤，5块。
+.
 
 新校区：
 红烧肉                         //gohome，肉多，土豆，适于特别饿的情况下，一般10快，一定要加一次米饭。
